Introduces distance-based penalties based on input speeds and timestamps